# Calculator_bsu_cpp

./: CMakeLists.txt  readme
include/: calculator.h  expression_parser.h  utils.h
src/: calculator.cpp  expression_parser.cpp  main.cpp  utils.cpp
tests/: test_calculator.cpp  test_expression_parser.cpp
